Fixed some styles on mobile version

--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -75,6 +75,12 @@
         .open-date {
             margin: 0 0 0 10px;
             border-radius: 5px;
+            padding: 5px 10px;
+        }
+
+        span {
+            font-family: Montserrat-Thin;
+            letter-spacing: 0.3px;
         }
     }
   }
