--- a/src/styles/components/_homepage.scss
+++ b/src/styles/components/_homepage.scss
@@ -330,10 +330,10 @@ main {
             span.pre-sale {
                 position: absolute;
                 top: 55%;
-                left: calc(50% - 88px);
+                left: calc(50% - 94px);
                 background-color: #25262B;
                 border: 1px solid white;
-                padding: 20px 60px;
+                padding: 21px 64px;
                 border-radius: 15px;
                 font-size: 14px;
                 font-family: 'Montserrat-Regular';
